kubernetes/cluster/006_pacman_istio_gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: pacman
spec:
  hosts:
    - ${APPLICATION_FQDN}
  gateways:
    - istio-system/demo-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: pacman
            port:
              number: 80
